# runelord

./: README.md  pyproject.toml
src/runelord/: __main__.py  bot.py  check.py  dice.py  error.py  parse.py  random.py  render.py
src/runelord/commands/: augment_command.py  check_command.py  command.py  resist_command.py
src/runelord/rq/: __init__.py  ability_check.py  ability_score.py  util.py
tests/: helpers.py  test_bot.py  test_check_ability.py  test_check_thresholds.py
tests/rq/: test_ability_check.py  test_ability_score.py
