[project]
name = "runelord"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "d20>=1.1.2",
    "py-cord>=2.6.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
runelord = "runelord.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runelord"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
